[package]
name = "actix-ws"
description = "Websockets for the Actix runtime, without Actors"
version = "0.2.5"
authors = ["asonix <asonix@asonix.dog>"]
readme = "README.md"
repository = "https://git.asonix.dog/asonix/actix-actorless-websockets"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["examples/chat"]

[dependencies]
actix-codec = "0.5.0"
actix-http = { version = "3.0", default-features = false, features = ["ws"] }
actix-web = { version = "4.0", default-features = false }
futures-core = "0.3"
tokio = { version = "1", features = ["sync"] }
