[package]
name = "actix-ws-ng"
description = "WebSockets for Actix Web, without actors"
version = "0.2.5"
authors = [
    "asonix <asonix@asonix.dog>",
    "Rob Ede <robjtede@icloud.com>"
]
readme = "README.md"
repository = "https://github.com/robjtede/actix-ws-ng"
license = "MIT/Apache-2.0"
edition = "2021"

[workspace]
members = ["examples/chat"]

[dependencies]
actix-codec = "0.5.0"
actix-http = { version = "3.0", default-features = false, features = ["ws"] }
actix-web = { version = "4.0", default-features = false }
futures-core = "0.3"
tokio = { version = "1", features = ["sync"] }
