[package]
name = "actix-ws"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2.0.0-alpha.2"
actix-rt = "1.1.0"
actix-web = "3.0.0-alpha.1"
anyhow = "1.0"
bytes = "0.5"
futures = "0.3"
pin-project = "0.4.9"
thiserror = "1.0"
tokio = { version = "0.2", features = ["sync", "stream", "io-util"] }
tokio-util = { version = "0.2", features = ["codec"] }
