[package]
name = "chat"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.6"
actix-web = "4.0.1"
actix-ws = { version = "0.2.0", path = "../.." }
anyhow = "1.0"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["sync"] }
